Colaboratory를 통해 생성됨

--- a/ch2_exercises_py10.ipynb
+++ b/ch2_exercises_py10.ipynb
@@ -126,29 +126,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "c6725b7a-e407-467d-82ce-a2b1a3150242"
+        "outputId": "bdefafbc-230e-4b0c-8634-69889350024c"
       },
       "source": [
         "# [Q2] Code\n",
         "# 1. 판별 기준 : 자연수 13이 있을 때 2로 나누어서 0이 남으면 짝수 1이 남으면 홀수라고 판별한다.\n",
-        "2. 코드 : \n",
         "a = 13\n",
         "if\n",
-        "a%2=0\n",
-        "짝수\n",
-        "A\n",
-        "else\n",
-        "a%2=1\n",
-        "홀수"
+        " a%2==1:print(\"%d은 홀수입니다\".%a)\n",
+        "  else\n",
+        "  print(\"%d는 짝수입니다.\"%a)\n"
       ],
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-ee6662324004>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    2. 코드 :\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-c236e5bae5e6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
@@ -175,7 +171,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "6821dfec-46ae-4ce3-d8b6-c0a947c4f122"
+        "outputId": "d5b5c8cd-8bff-47cf-c35e-9ce6147f8ec2"
       },
       "source": [
         "# [Q3] Code\n",
@@ -185,7 +181,7 @@
         ">>> a[8:14]\n",
         "'068234'\n"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +193,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -271,7 +267,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "a43d0e26-f0f4-4daf-9af6-1d02042ef527"
+        "outputId": "5c29b0fc-2ff6-4dc4-ffd7-95fc35b122fd"
       },
       "source": [
         "# [Q5] Code\n",
@@ -279,7 +275,7 @@
         ">>> a.replace(\":\", \"#\")\n",
         "'a#b#c#d'\n"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +287,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -313,17 +309,33 @@
       "metadata": {
         "colab_type": "code",
         "id": "AjYR0lUaXJBa",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b83b33ae-c3bd-40f6-b110-eca1b7f98e77"
       },
       "source": [
         "# [Q6] Code\n",
         "a = [1,3,5,4,2]\n",
         "a.reverse()\n",
-        ">>> a\n",
         "[5, 4, 3, 2, 1]\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[5, 4, 3, 2, 1]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -343,20 +355,33 @@
       "metadata": {
         "colab_type": "code",
         "id": "9N_atipGZZii",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "21a76405-07eb-4e78-b78c-515af229edfc"
       },
       "source": [
         "# [Q7] Code\n",
-        "a = ['Life', 'is', 'too', 'short']\n",
-        ">>> result = \" \".join(a)\n",
-        ">>> print(result)\n",
-        "Life is too short\n",
-        ">>> a = ['Life', 'is', 'too', 'short']\n",
-        ">>> a[0]+' '+a[1]+' '+a[2]+' '+a[3]\n",
-        "'Life is too short'\n"
+        "\n",
+        "a = ['Life', 'is','too', 'short']\n",
+        "\" \".join(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Life is too short'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -376,17 +401,33 @@
       "metadata": {
         "colab_type": "code",
         "id": "i4BTj9htZaao",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4f4183c7-07af-4604-ca06-7b8cec9efc15"
       },
       "source": [
         "# [Q8] Code\n",
         "a = [1, 2, 3]\n",
         ">>> a.append(4)\n",
-        ">>> print(a)\n",
         "[1, 2, 3, 4]\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -415,7 +456,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "f-5U0rBgZbEB",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "c50c172a-c261-4d12-e339-02111d70357f"
       },
       "source": [
         "# [Q9] Code & explanation\n",
@@ -423,8 +468,17 @@
         "3. a[[1]] = 'python'\n",
         "딕셔너리의 키로는 변하는 값을 사용할 수 없기 때문이다."
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-aa2c0fb8288d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    3. a[[1]] = 'python'\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -445,7 +499,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "Y9swWMWHZbpm",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "eff23609-b6a4-48b6-91e5-0d48de373bee"
       },
       "source": [
         "# [Q10] Code\n",
@@ -454,8 +512,17 @@
         "print(a) \n",
         "print(result) "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'A': 90, 'C': 70}\n",
+            "80\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -476,7 +543,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "paSvArIWZcSB",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9a8cd696-3f0a-4236-d8c7-8cb134af2911"
       },
       "source": [
         "# [Q11] Code\n",
@@ -485,8 +556,16 @@
         "b = list(aset) \n",
         "print(b)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -508,15 +587,30 @@
       "metadata": {
         "colab_type": "code",
         "id": "RvRIUGqAZc3W",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e9c9e752-4ecc-4286-95a2-a16ca789661e"
       },
       "source": [
         "# [Q12] Code & explanation\n",
+        "a = b = [1, 2, 3]\n",
+        "a[1] = 4\n",
+        "print(b)\n",
         "\n",
-        "1,4,3이 출력된다.왜냐하면 a와 b둘다 1,2,3이라는 숫자가 동일하기 때문이다."
+        "# 1,4,3이 출력된다.왜냐하면 a와 b둘다 1,2,3이라는 숫자가 동일하기 때문이다."
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 4, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
