--- a/ch2_exercises_py10.ipynb
+++ b/ch2_exercises_py10.ipynb
@@ -124,28 +124,27 @@
         "id": "5MBLUZ5WXF1q",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 35
         },
-        "outputId": "bdefafbc-230e-4b0c-8634-69889350024c"
+        "outputId": "977eaf69-f02b-4b48-ace0-990022458bb5"
       },
       "source": [
         "# [Q2] Code\n",
         "# 1. 판별 기준 : 자연수 13이 있을 때 2로 나누어서 0이 남으면 짝수 1이 남으면 홀수라고 판별한다.\n",
         "a = 13\n",
-        "if\n",
-        " a%2==1:print(\"%d은 홀수입니다\".%a)\n",
-        "  else\n",
+        "if a%2==1:\n",
+        "  print(\"%d은 홀수입니다.\"%a)\n",
+        "else:\n",
         "  print(\"%d는 짝수입니다.\"%a)\n"
       ],
-      "execution_count": 28,
+      "execution_count": 56,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-28-c236e5bae5e6>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "13은 홀수입니다.\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
