--- a/ch2_exercises_py10.ipynb
+++ b/ch2_exercises_py10.ipynb
@@ -170,17 +170,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "d5b5c8cd-8bff-47cf-c35e-9ce6147f8ec2"
+        "outputId": "8b5e6e79-0797-40d7-a3a6-d01b6ec7a939"
       },
       "source": [
         "# [Q3] Code\n",
         "a = \"881120-1068234\"\n",
-        ">>> a[0:6]\n",
-        "'881120'\n",
-        ">>> a[8:14]\n",
+        "a_list = a split(\"\\\")\n",
+        "print(a_list[])\n",
+        "a[8:14]\n",
         "'068234'\n"
       ],
-      "execution_count": 7,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 61
         }
       ]
     },
@@ -220,7 +220,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "7c7eba8d-2881-491f-f47c-77c2ba29520c"
+        "outputId": "18ead05d-4248-4f57-cb7a-0448a1afcc8c"
       },
       "source": [
         "# [Q4] Code\n",
@@ -228,7 +228,7 @@
         ">>> a[7]\n",
         "'1'\n"
       ],
-      "execution_count": 5,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 62
         }
       ]
     },
@@ -266,7 +266,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "5c29b0fc-2ff6-4dc4-ffd7-95fc35b122fd"
+        "outputId": "16fbd542-619e-4ce2-b4c7-0a9bee261e62"
       },
       "source": [
         "# [Q5] Code\n",
@@ -274,7 +274,7 @@
         ">>> a.replace(\":\", \"#\")\n",
         "'a#b#c#d'\n"
       ],
-      "execution_count": 17,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +286,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 58
         }
       ]
     },
@@ -308,19 +308,32 @@
       "metadata": {
         "colab_type": "code",
         "id": "AjYR0lUaXJBa",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "b83b33ae-c3bd-40f6-b110-eca1b7f98e77"
+        "colab": {}
       },
       "source": [
         "# [Q6] Code\n",
         "a = [1,3,5,4,2]\n",
-        "a.reverse()\n",
-        "[5, 4, 3, 2, 1]\n"
+        "a.sort()\n",
+        "a.reverse()\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k_C9bNwMEcoN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "10d4a5a5-3144-49de-9203-ac28b4f870c0"
+      },
+      "source": [
+        "a"
+      ],
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,7 +345,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 73
         }
       ]
     },
@@ -358,7 +371,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "21a76405-07eb-4e78-b78c-515af229edfc"
+        "outputId": "96194c18-9df3-4eef-8b1e-03264a08dbe6"
       },
       "source": [
         "# [Q7] Code\n",
@@ -366,7 +379,7 @@
         "a = ['Life', 'is','too', 'short']\n",
         "\" \".join(a)"
       ],
-      "execution_count": 27,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +391,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 63
         }
       ]
     },
