Colaboratory를 통해 생성됨

--- a/ch2_exercises_py10.ipynb
+++ b/ch2_exercises_py10.ipynb
@@ -413,19 +413,32 @@
       "metadata": {
         "colab_type": "code",
         "id": "i4BTj9htZaao",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "4f4183c7-07af-4604-ca06-7b8cec9efc15"
+        "colab": {}
       },
       "source": [
         "# [Q8] Code\n",
         "a = [1, 2, 3]\n",
         ">>> a.append(4)\n",
-        "[1, 2, 3, 4]\n"
+        "\n"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BF0O74rtGu1V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8f5a6deb-07d6-42e8-9464-77967559b11e"
+      },
+      "source": [
+        "a"
+      ],
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -437,7 +450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 76
         }
       ]
     },
