Colaboratory를 통해 생성됨

--- a/ch5_exercises_py10.ipynb
+++ b/ch5_exercises_py10.ipynb
@@ -68,11 +68,11 @@
       "metadata": {
         "id": "rUNNaqJPdg7B",
         "colab_type": "code",
+        "outputId": "9c0789c6-dd13-4f99-8749-6ce0dbd58c3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9c0789c6-dd13-4f99-8749-6ce0dbd58c3b"
+        }
       },
       "source": [
         "# [Q1] Code  \n",
@@ -91,7 +91,7 @@
         "cal.minus(7)\n",
         "print(cal.value) # 10에서 7을 빼서 3을 출력하였다\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,15 +133,15 @@
       "metadata": {
         "colab_type": "code",
         "id": "5MBLUZ5WXF1q",
+        "outputId": "939b5573-c9c8-4a84-b899-b8ef4cbfb7b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b722a0c8-fe00-4484-dc13-e862db173979"
+        }
       },
       "source": [
         "# [Q2] Code\n",
-        "class Calculator:\n",
+        "lass Calculator:\n",
         "  def __init__(self):\n",
         "    self.value = 0\n",
         "\n",
@@ -160,7 +160,7 @@
         "print(cal.value)\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,14 +197,61 @@
       "metadata": {
         "colab_type": "code",
         "id": "H9T_sXHzXGnW",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9d9212f0-0bc3-4340-a0a8-41385e558357"
       },
       "source": [
         "# [Q3] Code\n",
-        "\n"
+        "all([1, 2, abs(-3)-3]) #)#abs(x)는 어떤 숫자를 입력받았을 때, 그 숫자의 절댓값을 돌려주는 함수\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uUb1XhsPoUOg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4f030cdc-5588-43e3-97b1-423589add9d0"
+      },
+      "source": [
+        "chr(ord('a')) == 'a'"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -222,14 +269,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "oQ5UnmayXHY-",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "247b4296-5bc4-4865-907c-3e20a70eab69"
       },
       "source": [
         "# [Q4] Code\n",
-        "\n"
+        "list(filter(lambda x:x>0,[1,-2,-3,-5, 8, -3]))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 8]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -253,14 +317,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "5MZQYOVjXIL_",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "af2b3d4d-1e15-4869-d7de-cd642963a747"
       },
       "source": [
         "# [Q5] Code\n",
-        "\n"
+        "int('0xea',16)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "234"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -278,14 +359,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "AjYR0lUaXJBa",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "50bdd4e4-2692-4616-ab9f-ae3028d5fdb3"
       },
       "source": [
         "# [Q6] Code\n",
-        "\n"
+        "list(map(lambda x:x*3,[1,2,3,4]))\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 6, 9, 12]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,14 +402,32 @@
       "metadata": {
         "colab_type": "code",
         "id": "Ll_2InMWbmKq",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ce2eb12a-e8d3-4780-b824-119b34b6ccf5"
       },
       "source": [
         "# [Q7] Code\n",
+        "max([-8, 2, 7, 5, -3, 5, 0, 1])+min([-8, 2, 7, 5, -3, 5, 0, 1])\n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -334,14 +450,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "GmaaVGqrK6le",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "89c2e457-8016-4c6b-d479-790658c59972"
       },
       "source": [
         "# [Q8] Code\n",
-        "\n"
+        "round(17 / 3,4)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.6667"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -367,14 +500,37 @@
       "metadata": {
         "colab_type": "code",
         "id": "QJTNoSqtMrIM",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 239
+        },
+        "outputId": "77a310bb-1526-46d4-fcdc-e35e74e0580a"
       },
       "source": [
         "# [Q9] Code\n",
-        "\n"
+        "import sys\n",
+        "\n",
+        "numbers = sys.argv[1:] \n",
+        "\n",
+        "result = 0\n",
+        "for number in numbers:\n",
+        "    result += int(number)\n",
+        "print(result)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-eaa4b022432b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnumber\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnumbers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '-f'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -396,14 +552,36 @@
       "metadata": {
         "colab_type": "code",
         "id": "XCnUj3obMr3v",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 239
+        },
+        "outputId": "76395846-ec1b-4657-9258-58d23d7fdc8f"
       },
       "source": [
         "# [Q10] Code\n",
-        "\n"
+        "import os\n",
+        "os.chdir(\"C:/admin\")\n",
+        "\n",
+        "\n",
+        "result = os.popen(\"dir\")\n",
+        "\n",
+        "print(result.read())"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-3185b93e4c72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"C:/temp\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"dir\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/temp'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -421,14 +599,32 @@
       "metadata": {
         "colab_type": "code",
         "id": "UCO7aRh5Msx6",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d4529b91-7889-4c7c-8ae1-0c095cac3b2f"
       },
       "source": [
         "# [Q11] Code\n",
-        "\n"
+        "import glob\n",
+        "glob.glob(\"c:/doit/*.py\")\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -448,14 +644,32 @@
       "metadata": {
         "colab_type": "code",
         "id": "80vm6aSMM3gf",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3f18616f-05bb-4f07-bdc1-4b0f81f25986"
       },
       "source": [
         "# [Q12] Code\n",
-        "\n"
+        "import time\n",
+        "time.strftime(\"%Y/%m/%d %H:%M:%S\")\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2019/11/24 13:39:28'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -473,14 +687,34 @@
       "metadata": {
         "colab_type": "code",
         "id": "FiKNOu9HM3DX",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b132f251-28a9-401f-ff7d-d51004cfa9c8"
       },
       "source": [
         "# [Q13] Code\n",
-        "\n"
+        "import random\n",
+        "\n",
+        "a = []\n",
+        "while len(a)<6:\n",
+        "  b = random.randint(1,45)\n",
+        "  if b not in a:\n",
+        "    a.append(b)\n",
+        "\n",
+        "print(a)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[38, 40, 20, 10, 11, 1]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
